@@ -1,3 +1,14 @@
+2017-09-11 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
+
+	* arts-2-3-791
+
+	* src/methods.cc (ZFromPSimple):
+	Moved pressure check out of loop to avoid inconsistent state in case
+	of error.
+
+	* src/methods.cc (PFromZSimple):
+	Ported PFromZSimple method from atmlab.
+
 2017-09-05 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-790
